# JsspSolver

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  diagram.mmd  plan.md
data/: challenging_12jobs_4machines.jssp  complex_8x8.jssp  hard_10x5.jssp  hard_7x3.jssp  medium_5x5.jssp  simple_3x3.jssp
include/: README.md  base_ui.hpp  gantt_maker.hpp  models.hpp  parser.hpp  solution_serializer.hpp  solver.hpp
include/docs/: base_ui.md  gantt_maker.md  models.md  parser.md  solution_serializer.md  solver.md
src/: README.md  gantt_maker.cpp  main.cpp  models.cpp  parser.cpp  solution_serializer.cpp  solver.cpp
src/docs/: gantt_maker.md  main.md  models.md  parser.md  solution_serializer.md  solver.md
tests/: CMakeLists.txt  README.md  run_tests.sh  test_gantt_maker.cpp  test_integration.cpp  test_models.cpp  test_parser.cpp  test_solver.cpp
tests/docs/: test_gantt_maker.md  test_integration.md  test_models.md  test_parser.md  test_solver.md
tests/test_data/: invalid_test.jssp  medium_test.jssp  simple_test.jssp
ui/: README.md  base_ui.cpp
ui/docs/: base_ui.md
